# desafioOpenApi

./: README.md  pyproject.toml
src/models/: transaction.py
