[project]
name = "desafioopenapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Diogo Oliveira",email = "diogo.oliveira@gm5.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
