[project]
name = "desafioopenapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Diogo Oliveira",email = "diogo.oliveira@gm5.com.br"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
databases = { version = "*", extras = ["aiosqlite", "asyncpg"] }
pyjwt = "*"
psycopg2-binary = "*"
pydantic-settings = "*"
alembic = "*"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
